...
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:text="@string/text_empty"
                android:textColor="@color/black7"
                android:textSize="13sp"
                app:layout_constraintEnd_toStartOf="@+id/checkBox_image"
                app:layout_constraintTop_toBottomOf="@+id/imageButton_postImage" />

            <CheckBox
                android:id="@+id/checkBox_image"
                android:layout_width="16dp"
                android:layout_height="16dp"
...
                android:paddingVertical="14dp"
                android:text="@string/text_cancel"
                android:textColor="@color/primary100"
                android:textSize="15sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_complete"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="DuplicateClickableBoundsCheck,TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_complete"
                style="@style/Widget.AppCompat.Button.Borderless"
...
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView_letter_registration" />

                    <EditText
                        android:id="@+id/editText_title"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/exitText_height"
                        android:layout_marginHorizontal="@dimen/register_horizontal_margin"
                        android:layout_marginTop="4dp"
                        android:autofillHints="no"
                        android:background="@{registerViewModel.titleEditTextEmpty ? @drawable/drawable_edit_text_error_background : @drawable/drawable_edit_text_background}"
...
                        android:onClick="@{() -> registerViewModel.onHostCheckBoxClick()}"
                        app:layout_constraintBottom_toBottomOf="@+id/textView_host"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView_host" />

                    <EditText
                        android:id="@+id/editText_host"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/exitText_height"
                        android:layout_marginHorizontal="@dimen/register_horizontal_margin"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/drawable_edit_text_background"
                        android:enabled="@{!registerViewModel.hostCheckBoxBoolean}"
...
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editText_host" />

                    <Spinner
                        android:id="@+id/spinner_classification"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/exitText_height"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/drawable_edit_text_background"
                        android:entries="@array/classification"
...
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/spinner_classification" />

                    <EditText
                        android:id="@+id/editText_target"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/exitText_height"
                        android:layout_marginHorizontal="@dimen/register_horizontal_margin"
                        android:layout_marginTop="4dp"
                        android:background="@{registerViewModel.targetEditTextEmpty ? @drawable/drawable_edit_text_error_background : @drawable/drawable_edit_text_background}"
                        android:importantForAutofill="no"
...
                        android:layout_height="18dp"
                        android:layout_marginEnd="4dp"
                        android:text="@string/text_empty"
                        android:textColor="@color/black7"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="@+id/textView_contact"
                        app:layout_constraintEnd_toStartOf="@+id/checkBox"
                        app:layout_constraintTop_toTopOf="@+id/textView_contact" />

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
...
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="@+id/textView_location"
                        app:layout_constraintEnd_toStartOf="@+id/checkBox"
                        app:layout_constraintTop_toTopOf="@+id/textView_location" />

                    <CheckBox
                        android:id="@+id/checkBox_location"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/custom_checkbox"
                        android:button="@null"
                        android:checked="@={registerViewModel.locationCheckBoxBoolean}"
...
                        android:background="@color/white"
                        android:elevation="8dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:title="@string/event_preview" />

                    <ImageView
                        android:id="@+id/imageView"
                        imageFromUrl="@{registerViewModel.imageUrl}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/detail_horizontal_margin"
                        android:layout_marginTop="16dp"
                        android:adjustViewBounds="true"
...
