...
            android:background="@drawable/ic_drawable_blur"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/floating_action_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="24dp"
            android:background="@drawable/drawable_btn_register_background"
            android:elevation="4dp"
...
